# mcpx

./: .gitignore  Cargo.toml  README.md  build.ps1  bump.ps1
examples/: full_client.rs  http_client.rs  simple_client.rs  simple_server.rs  websocket_server.rs
filesystem/: Cargo.toml  README.md
filesystem/src/: filesystem.rs  main.rs
filesystem/src/tools/: directory.rs  info.rs  mod.rs  read.rs  search.rs  write.rs
jupyter/: Cargo.toml  README.md
jupyter/src/: main.rs
powershell/: Cargo.toml  README.md  test_build.ipynb
powershell/src/: main.rs  powershell.rs
powershell/src/tools/: execute.rs  mod.rs  process.rs
src/: error.rs  lib.rs
src/client/: builder.rs  handler.rs  mod.rs  state.rs
src/protocol/: annotations.rs  completion.rs  json_rpc.rs  logging.rs  messages.rs  mod.rs  prompts.rs  resources.rs  roots.rs  sampling.rs  tools.rs
src/server/: builder.rs  handler.rs  mod.rs  service.rs  state.rs
src/transport/: http.rs  mod.rs  websocket.rs
src/utils/: base64.rs  json.rs  mod.rs  uri.rs
