[package]
name = "mcpx"
version = "0.1.5"
edition = "2021"
authors = ["MCPX Developers"]
description = "A Rust SDK for the Model Context Protocol (MCP)"
repository = "https://github.com/incredimo/mcpx"
license = "MIT"
readme = "README.md"
keywords = ["mcp", "llm", "ai", "protocol", "sdk"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"
bytes = "1.5"
log = "0.4"
base64 = "0.21"
url = "2.5"
uuid = { version = "1.6", features = ["v4", "serde"] }
regex = "1.10"
uri-template-system = "0.1.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
dashmap = "5.5"

async-recursion = "1.0"
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"
derive_builder = "0.13"
tokio-tungstenite = "0.26.2"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.9"
mockall = "0.12"
wiremock = "0.5"





