[package]
name = "mpcx-jupyter"
version = "0.1.0"
edition = "2021"
description = "A JupyterLab MCP server implementation in Rust"
license = "BSD-3-Clause"

[dependencies]
rmcp = { version = "0.1", features = ["server"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
log = "0.4"
env_logger = "0.10"
uuid = { version = "1.3", features = ["v4"] }
chrono = "0.4"

[[bin]]
name = "mpcx-jupyter"
path = "src/main.rs"
