[package]
name = "mcpx-powershell"
version = "0.1.0"
edition = "2021"
description = "PowerShell MCP Server - Model Context Protocol implementation for PowerShell command execution"
authors = ["MCPX Team"]

[dependencies]
rmcp = { version = "0.1", features = ["server"] }
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
thiserror = "1.0"
anyhow = "1.0"
futures = "0.3"
log = "0.4"
env_logger = "0.10"
uuid = { version = "1.4", features = ["v4"] }
chrono = "0.4"
dashmap = "5.4"

[[bin]]
name = "mcpx-powershell"
path = "src/main.rs"
